force-app/main/default/objects/KT_Document_Uploaded__e/KT_Document_Uploaded__e.object-meta.xml
<CustomObject>
    <description>B4 platform event published when a document upload is accepted into the KT document vault pipeline.</description>
    <label>KT Document Uploaded</label>
    <pluralLabel>KT Document Uploaded Events</pluralLabel>
</CustomObject>