force-app/main/default/objects/KT_Document_Uploaded__e/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>