force-app/main/default/objects/KT_Document_Uploaded__e/fields/OnboardingId__c.field-meta.xml
<CustomField>
    <fullName>OnboardingId__c</fullName>
    <label>Onboarding Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>