force-app/main/default/objects/KT_Document_Uploaded__e/fields/UploadedBy__c.field-meta.xml
<CustomField>
    <fullName>UploadedBy__c</fullName>
    <label>Uploaded By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>