force-app/main/default/objects/KT_Document_Uploaded__e/fields/VaultId__c.field-meta.xml
<CustomField>
    <fullName>VaultId__c</fullName>
    <description>Document vault entry linked to the uploaded file event.</description>
    <label>Vault Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>